--- a/src/styles/public.scss
+++ b/src/styles/public.scss
@@ -2,275 +2,275 @@
  * ---- user-select ----
  */
 .select-none {
-    user-select: none;
+  user-select: none;
 }
 
 /**
 * ---- text-align ----
 */
 .text-left {
-    text-align: left;
+  text-align: left;
 }
 
 .text-right {
-    text-align: right;
+  text-align: right;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .text-justify {
-    text-align: justify;
+  text-align: justify;
 }
 
 /**
 *---- box-sizing ----
 */
 .bx {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /**
 * ---- Display ----
 */
 .block {
-    display: block;
+  display: block;
 }
 
 .inline-block {
-    display: inline-block;
+  display: inline-block;
 }
 
 /**
 * ---- Text ----
 */
 .nowrap {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 /**
 * ---- Flex ----
 */
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .flex-wrap {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-jcsb-aic {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flex-jcfe-aic {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .flex-jcfs-aic {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .flex-jcfs-aifs {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .flex-jcfs-aife {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
 }
 
 .flex-jcc-aifs {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .flex-jcc-aife {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .flex-jcsb-aifs {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .flex-jcsb-aife {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .flex-column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .flex-as-asfe {
-    align-self: flex-end;
+  align-self: flex-end;
 }
 
 .grow {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .shrink {
-    flex-shrink: 0;
+  flex-shrink: 0;
 }
 
 @for $i from 1 through 5 {
-    .pad-#{$i} {
-        padding: #{$i}px;
-    }
+  .pad-#{$i} {
+    padding: #{$i}px;
+  }
 
-    .pad-l-#{$i} {
-        padding-left: #{$i}px;
-    }
-    .pad-r-#{$i} {
-        padding-right: #{$i}px;
-    }
-    .pad-t-#{$i} {
-        padding-top: #{$i}px;
-    }
-    .pad-b-#{$i} {
-        padding-bottom: #{$i}px;
-    }
-    .pad-lr-#{$i * 5} {
-        padding-left: #{$i}px;
-        padding-right: #{$i}px;
-    }
-    .pad-tb-#{$i * 5} {
-        padding-top: #{$i}px;
-        padding-bottom: #{$i}px;
-    }
+  .pad-l-#{$i} {
+    padding-left: #{$i}px;
+  }
+  .pad-r-#{$i} {
+    padding-right: #{$i}px;
+  }
+  .pad-t-#{$i} {
+    padding-top: #{$i}px;
+  }
+  .pad-b-#{$i} {
+    padding-bottom: #{$i}px;
+  }
+  .pad-lr-#{$i * 5} {
+    padding-left: #{$i}px;
+    padding-right: #{$i}px;
+  }
+  .pad-tb-#{$i * 5} {
+    padding-top: #{$i}px;
+    padding-bottom: #{$i}px;
+  }
 }
 
 @for $i from 1 through 10 {
-    .pad-#{$i * 5} {
-        padding: $i * 5px;
-    }
-    .pad-l-#{$i * 5} {
-        padding-left: $i * 5px;
-    }
-    .pad-r-#{$i * 5} {
-        padding-right: $i * 5px;
-    }
-    .pad-t-#{$i * 5} {
-        padding-top: $i * 5px;
-    }
-    .pad-b-#{$i * 5} {
-        padding-bottom: $i * 5px;
-    }
-    .pad-lr-#{$i * 5} {
-        padding-left: $i * 5px;
-        padding-right: $i * 5px;
-    }
-    .pad-tb-#{$i * 5} {
-        padding-top: $i * 5px;
-        padding-bottom: $i * 5px;
-    }
+  .pad-#{$i * 5} {
+    padding: $i * 5px;
+  }
+  .pad-l-#{$i * 5} {
+    padding-left: $i * 5px;
+  }
+  .pad-r-#{$i * 5} {
+    padding-right: $i * 5px;
+  }
+  .pad-t-#{$i * 5} {
+    padding-top: $i * 5px;
+  }
+  .pad-b-#{$i * 5} {
+    padding-bottom: $i * 5px;
+  }
+  .pad-lr-#{$i * 5} {
+    padding-left: $i * 5px;
+    padding-right: $i * 5px;
+  }
+  .pad-tb-#{$i * 5} {
+    padding-top: $i * 5px;
+    padding-bottom: $i * 5px;
+  }
 }
 
 /**
 * ---- margin ----
 */
 .mar {
-    margin: 0;
+  margin: 0;
 }
 
 @for $i from 1 through 5 {
-    .mar-#{$i} {
-        margin: #{$i}px;
-    }
+  .mar-#{$i} {
+    margin: #{$i}px;
+  }
 
-    .mar-l-#{$i} {
-        margin-left: #{$i}px;
-    }
-    .mar-r-#{$i} {
-        margin-right: #{$i}px;
-    }
-    .mar-t-#{$i} {
-        margin-top: #{$i}px;
-    }
-    .mar-b-#{$i} {
-        margin-bottom: #{$i}px;
-    }
-    .mar-lr-#{$i * 5} {
-        margin-left: #{$i}px;
-        margin-right: #{$i}px;
-    }
-    .mar-tb-#{$i * 5} {
-        margin-top: #{$i}px;
-        margin-bottom: #{$i}px;
-    }
+  .mar-l-#{$i} {
+    margin-left: #{$i}px;
+  }
+  .mar-r-#{$i} {
+    margin-right: #{$i}px;
+  }
+  .mar-t-#{$i} {
+    margin-top: #{$i}px;
+  }
+  .mar-b-#{$i} {
+    margin-bottom: #{$i}px;
+  }
+  .mar-lr-#{$i * 5} {
+    margin-left: #{$i}px;
+    margin-right: #{$i}px;
+  }
+  .mar-tb-#{$i * 5} {
+    margin-top: #{$i}px;
+    margin-bottom: #{$i}px;
+  }
 }
 
 @for $i from 1 through 10 {
-    .mar-#{$i * 5} {
-        margin: $i * 5px;
-    }
-    .mar-l-#{$i * 5} {
-        margin-left: $i * 5px;
-    }
-    .mar-r-#{$i * 5} {
-        margin-right: $i * 5px;
-    }
-    .mar-t-#{$i * 5} {
-        margin-top: $i * 5px;
-    }
-    .mar-b-#{$i * 5} {
-        margin-bottom: $i * 5px;
-    }
-    .mar-lr-#{$i * 5} {
-        margin-left: $i * 5px;
-        margin-right: $i * 5px;
-    }
-    .mar-tb-#{$i * 5} {
-        margin-top: $i * 5px;
-        margin-bottom: $i * 5px;
-    }
+  .mar-#{$i * 5} {
+    margin: $i * 5px;
+  }
+  .mar-l-#{$i * 5} {
+    margin-left: $i * 5px;
+  }
+  .mar-r-#{$i * 5} {
+    margin-right: $i * 5px;
+  }
+  .mar-t-#{$i * 5} {
+    margin-top: $i * 5px;
+  }
+  .mar-b-#{$i * 5} {
+    margin-bottom: $i * 5px;
+  }
+  .mar-lr-#{$i * 5} {
+    margin-left: $i * 5px;
+    margin-right: $i * 5px;
+  }
+  .mar-tb-#{$i * 5} {
+    margin-top: $i * 5px;
+    margin-bottom: $i * 5px;
+  }
 }
 
 @for $i from 1 through 9 {
-    .w-#{$i * 5} {
-        width: $i * 5px;
-    }
+  .w-#{$i * 5} {
+    width: $i * 5px;
+  }
 }
 
 @for $i from 1 through 10 {
-    .w-#{$i * 50} {
-        width: $i * 50px;
-    }
+  .w-#{$i * 50} {
+    width: $i * 50px;
+  }
 }
 
 /**
 * ---- position ----
 */
 .relative {
-    position: relative;
+  position: relative;
 }
 
 .absolute {
-    position: absolute;
+  position: absolute;
 }
 
 /**
@@ -278,54 +278,54 @@
 */
 
 .w-100vw {
-    width: 100vw;
+  width: 100vw;
 }
 
 .w-100p {
-    width: 100%;
+  width: 100%;
 }
 
 /**
 * ---- height ----
 */
 .h-100p {
-    height: 100%;
+  height: 100%;
 }
 
 .h-100vh {
-    height: 100vh;
+  height: 100vh;
 }
 
 .wh-100p {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .bold {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 /**
 * ---- cursor ----
 */
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /**
 * ---- ellipsis ----
 */
 .text-one-ellipsis {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 .ios-bottom {
-    padding-bottom: constant(safe-area-inset-bottom);
-    padding-bottom: env(safe-area-inset-bottom);
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 /**
@@ -333,9 +333,16 @@
 */
 
 .scroll-y {
-    overflow-y: scroll;
+  overflow-y: scroll;
 }
 
 .scroll-x {
-    overflow-x: scroll;
+  overflow-x: scroll;
+}
+
+.events-none {
+  pointer-events: none;
+}
+.events {
+  pointer-events: all;
 }
