--- a/src/styles/public.scss
+++ b/src/styles/public.scss
@@ -49,6 +49,12 @@
   white-space: nowrap;
 }
 
+@for $i from 1 through 60 {
+  .fs-#{$i} {
+    font-size: $i * 1px;
+  }
+}
+
 /**
 * ---- Flex ----
 */
